--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="button-group">
                 <button id="run-btn" class="btn btn-primary">▶️ รัน</button>
                 <button id="clear-btn" class="btn btn-secondary">🗑️ ล้างค่า</button>
+                <button id="test-noti-btn" class="btn btn-test">🔔 ทดสอบ Notification</button>
             </div>
         </div>
 
